Add stage to artefact patch endpoint
