# backend/schemata/openapi.json
@@ -1488,6 +1488,17 @@
               }
             ],
             "title": "Archived"
+          },
+          "stage": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Stage"
           }
         },
         "type": "object",
